test/parser.d/should_fail/import5.souc
module mymodule

import ./.

main() = do
	print "imported"
